
	- Changed PINF-org.firephp-* headers to X-PINF-org.firephp-*
	- Added support for an application ID
	- Added support to set variables
	- Encoding of variables in JSON format to send to client
  - Introduced versioning for the FirePHP XML protocol and set to 0.2
  - Implemented support for build version

2007-02-01 - Release Version: 0.0.1

	- Initial release to support FirefoxExtension Version 0.0.4